# cortex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cortex/: cli.py
cortex/bench/: __main__.py  embed_probe.py  gpu_sensor.py  metrics.py  query_probe.py  runner.py  targets.py
cortex/broker/: __init__.py  __main__.py  acl.py  config.py  dedup.py  registry.py  routing.py  server.py
cortex/console/: __init__.py  __main__.py  attack_matrix.py  backend.py  broker_subscriber.py  fanout.py  node_registry.py  ring_buffer.py
cortex/core/: __init__.py  article.py  canonical.py  crypto.py  envelope.py  errors.py  types.py
cortex/node/: broker_client.py  config.py  embedder.py  keys.py  node.py  provenance.py  query.py  receiver.py  store.py  trust.py  vector_index.py
cortex/sdk/: __init__.py  agent.py  client.py  exceptions.py  langchain_adapter.py  llamaindex_adapter.py  llm.py  memory.py  provenance.py
deploy/: Dockerfile  Makefile  docker-compose.yml
deploy/config/: alpha.yaml  beta.yaml  broker.yaml
deploy/registry/: org_registry.json
docs/: 2026-07-15-cortex-design.md  2026-07-15-cortex-prd.md  rocm-deployment.md
docs/agent-sessions/: 2026-07-18-code-review-gaps.md  2026-07-18-hackathon-competitiveness.md  2026-07-18-session.md  2026-07-19-session.md
docs/submission/: README_JUDGES.md  pitch-deck.html  pitch-deck.pptx  project-spec.md  quantization.md  slides_outline.md
examples/: quickstart.py
scenarios/soc_consortium/: agent_alpha.py  (+5 more)
scripts/: generate-spec-pdf.py  record-demo.py
spikes/: README.md  rocm_embed_spike.py
(+189 files in other folders)
