[project]
name = "percq-cortex"
version = "0.1.0"
description = "Decentralized agent memory fabric with cryptographic provenance"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "orbinix" }]
license = { text = "TBD" }

dependencies = [
    "cryptography>=42.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "networkx>=3.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3",
    "faiss-gpu>=1.8",
]
cpu = [
    "hnswlib>=0.8",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "requests>=2.32",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
